<resources>
    <string name="app_name">NavMap</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoiam9lbHJvYmIiLCJhIjoiY2w2NHA3YXNmMDA0ODNicnFkbG8zZWliYiJ9.mm7KAxiQhcekc_YnVc20TA</string>
    <string name="title_activity_nav_main">NavMain</string>
    <string name="title_explore">Explore</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="preferred_language">Preferred Language: </string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_to_navmap">Welcome to NavMap!</string>
    <string name="new_register_here">New? Register Here!</string>
    <string name="name">Name</string>
    <string name="back_to_login">Back to login?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="user_location_permission_explanation">This app needs access to your location in order to function.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="search_button">Search Button</string>
    <string name="focus_on_user_location_button">Focus on User Location Button</string>
    <string name="layer_menu_button">Layer Menu Button</string>
    <string name="toggle_satellite_view_button">Toggle Satellite View Button</string>
    <string name="toggle_traffic_view_button">Toggle Traffic View Button</string>
    <string name="toggle_street_view_button">Toggle Street View Button</string>
    <string name="use_imperial_system">Use Imperial System</string>
    <string name="preferred_type_of_landmark">Preferred type of landmark:</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="save_settings">Save Settings</string>
    <string name="stacy_s_mom_s_house">Stacy\'s Mom\'s House</string>
    <string name="_14_point_road_durban">14 Point Road, Durban</string>
    <string name="_11_15_saint_james_avenue_durban">11-15 Saint James Avenue, Durban</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="_4_lagoon_drive_umhlanga">4 Lagoon Drive, Umhlanga</string>
    <string name="grocery_store">Grocery Store</string>
    <string name="_18_augusta_road_berea">18 Augusta Road, Berea</string>
    <string name="navigate_to_bookmark">Navigate to Bookmark</string>
    <string name="address">Address</string>
    <string name="no_bookmarks">No bookmarks...</string>
    <string name="bookmark_something_and_find_it_here">Bookmark something and find it here!</string>
    <string name="enter_the_bookmark_name">Enter the bookmark name</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="bookmark_title">Bookmark Title</string>
    <string name="reset_password">Reset password</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="dist">Dist:</string>
    <string name="time">Time:</string>

    <string-array name="landmarksTypes">
        <item>Any</item>
        <item>Historical</item>
        <item>Modern</item>
        <item>Architectural</item>
    </string-array>
    <string-array name="languageTypes">
        <item>English</item>
        <item>Chinese</item>
        <item>French</item>
        <item>German</item>
        <item>Japanese</item>
        <item>Korean</item>
    </string-array>
</resources>