<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_margin="9dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/name"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:text="@string/address" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:backgroundTint="@color/darkGreen"
                android:contentDescription="@string/navigate_to_bookmark"
                android:scaleX=".8"
                android:scaleY=".8"
                android:src="@drawable/bookmark_arrow"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>