<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cabandt.navmap.BookmarkViewActivity"
    android:background="@color/grey">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        mapbox:mapbox_cameraZoom="12"
        android:layout_above="@+id/cvDescription"
        android:layout_marginBottom="-30dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDescription"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="-20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvBookmarkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookmark_title"
                android:textSize="24sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:id="@+id/tvBookmarkLatLbl"
                android:layout_below="@+id/tvBookmarkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"/>
            <TextView
                android:id="@+id/tvBookmarkLat"
                android:layout_below="@+id/tvBookmarkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="15dp"
                android:layout_marginStart="110dp"
                android:layout_alignStart="@id/tvBookmarkLatLbl"/>

            <TextView
                android:id="@+id/tvBookmarkLngLbl"
                android:layout_below="@+id/tvBookmarkLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"/>
            <TextView
                android:id="@+id/tvBookmarkLng"
                android:layout_below="@+id/tvBookmarkLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="110dp"
                android:layout_alignStart="@id/tvBookmarkLatLbl"/>

            <TextView
                android:id="@+id/tvBookmarkDistanceLbl"
                android:layout_below="@+id/tvBookmarkLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"/>
            <TextView
                android:id="@+id/tvBookmarkDistance"
                android:layout_below="@+id/tvBookmarkLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="110dp"
                android:layout_alignStart="@id/tvBookmarkLatLbl"/>

            <TextView
                android:id="@+id/tvBookmarkDurationLbl"
                android:layout_below="@+id/tvBookmarkDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"/>
            <TextView
                android:id="@+id/tvBookmarkDuration"
                android:layout_below="@+id/tvBookmarkDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="110dp"
                android:layout_alignStart="@id/tvBookmarkLatLbl"/>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="72dp"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_alignEnd="@+id/fabDeleteBookmark"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:text="@string/start_navigation"
                app:cornerRadius="50dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDeleteBookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                mapbox:borderWidth="0dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="36dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_baseline_delete_forever_24"
                app:tint="#DA0707"
                android:contentDescription="@string/search_button" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/bookmarkViewProgressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/darkGreen"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>