<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context="com.cabandt.navmap.ForgotPasswordActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="@color/darkGrey">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/header"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvExplanationLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="80dp"
        android:text="Enter your account email so that a reset request can be sent to you."
        android:textColor="#616161"
        android:textSize="16sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etRPEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/tvExplanationLbl"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />



    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@id/tvBackToLogin"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/lime"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="50dp"/>

    <TextView
        android:id="@+id/tvBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="60dp"
        android:text="@string/back_to_login"
        android:textColor="#616161"
        android:textSize="16sp"
        android:textAlignment="center"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/darkGreen"
        android:layout_above="@id/btnResetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>


</RelativeLayout>